--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - db
     ports:
       - "3000:3000"
+    env_file:
+      - .env
 
   db:
     image: postgres
@@ -26,3 +28,5 @@ services:
       - '5432:5432'
     volumes:
       - ./db/database.sql:/docker-entrypoint-initdb.d/create_db.sql
+    env_file:
+      - .env
